// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenario-detail renders correctly 1`] = `
<div
  className="css-1u8brfm-ScenarioSelectionDetail"
>
  <div
    className="css-ul982y-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          projects__scenario_detail_navigate_back_label
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      projects__scenario_detail_header_label
    </div>
  </div>
  <div
    className="css-mzr6l1-Card"
  >
    <div
      className="card-header css-1gsm478-CardHeader"
    />
    <div
      className="css-4t2i76-ScenarioSelectionDetail"
    >
      <div
        className="card-content css-1vyr92j-CardContent"
      >
        <div
          className="css-1ucjwqm-Columns"
        >
          <div
            className="css-me9x6r-Column"
          >
            <div
              className="css-lz4b3k-Label"
            >
              title
              <div
                className="css-nhflpf-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
            <div
              className="css-nvhwxh-InlineEditableHeader"
            >
              <div>
                <form
                  className="css-1c5ej61-InlineEditableHeader"
                  onBlur={[Function]}
                  onSubmit={[Function]}
                >
                  <div
                    className="css-1boxw9s-InlineEditableHeader"
                  >
                    <div
                      className="css-1iwo50k"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-nrul0i"
                      >
                        <input
                          className="css-2j0qcg"
                          defaultValue="Scenario 1"
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          readOnly={true}
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      className="hover-icon css-16vb3lw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            className="css-1oiyj7r-Column"
          >
            <div
              className="css-78az44-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              >
                <div
                  className="css-47wnmy-ReadonlyActionField"
                >
                  projects__detail_time_label
                </div>
              </div>
              <div
                className="content-wrapper css-b45n67-ReadonlyActionField"
              >
                <div
                  className="content css-1147qp7-ReadonlyActionField"
                >
                  <div
                    className="css-e8i3t7-Text"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    90 unit__minutes_short
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-18ypg4c-Column"
        >
          <div
            className="css-lz4b3k-Label"
          >
            description
            <div
              className="css-nhflpf-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="overlay-edit-field css-0"
          >
            <div
              className="css-1kjt8hf-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              />
              <div
                className="content-wrapper css-376q3o-ReadonlyActionField"
              >
                <div
                  className="content css-ci7wec-ReadonlyActionField"
                >
                  <div
                    className="css-10rpuak-InlineEditableTextarea"
                    onClick={[Function]}
                  >
                    <div
                      className="textarea css-1tlgdzf-InlineEditableTextarea"
                      contentEditable={false}
                      suppressContentEditableWarning={true}
                    >
                      description
                    </div>
                    <div
                      className="hover-icon css-1pndqgp-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1x21b1w-Information"
        >
          <div
            className="overlay-edit-field css-0"
          >
            <div
              className="css-1v0z0k-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              >
                <div
                  className="css-47wnmy-ReadonlyActionField"
                >
                  scenario_details__general_tags
                </div>
              </div>
              <div
                className="content-wrapper css-b45n67-ReadonlyActionField"
              >
                <div
                  className="content css-1147qp7-ReadonlyActionField"
                >
                  <div
                    className="css-1ws8uc4-Tag"
                  >
                    <div
                      className="css-12ia3h2-Text"
                    >
                      placeholder__tags
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-uietcf-Columns"
          >
            <div
              className="css-1oiyj7r-Column"
            >
              <div
                className="css-156ssgf-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__general_email
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1hje2zc-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        scenario_details__unavailable
                      </div>
                    </div>
                  </div>
                  <button
                    className="readonly-action-button css-4nv627-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      create_button
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="css-1oiyj7r-Column"
            >
              <div
                className="css-1v0z0k-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__date
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1147qp7-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        01.01.1970 (scenario_details__fictive_date)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1bbhnip-Column"
            >
              <div
                className="css-156ssgf-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__general_contributors
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1hje2zc-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        0 scenario_details__general_contributors
                      </div>
                    </div>
                  </div>
                  <button
                    className="readonly-action-button css-4nv627-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      scenario_details__button_invite
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1alawau-DetailViewCard"
      >
        <div
          className="css-njxlss-LabelledCard"
        >
          <div
            className="css-lz4b3k-Label"
          >
            scenario_details__settings_label
          </div>
          <div
            className="css-1dmlxz8-Card"
          >
            <div
              className="card-header css-1gsm478-CardHeader"
            />
            <div
              className="card-content css-1vlcwyz-DetailViewCard"
            >
              <div
                className="css-1105yyi-ScenarioSettings"
              >
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_sample_company
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_sample_company_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          scenario_details__settings_card_footer_label_files
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_emails
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_emails_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          12 scenario_details__settings_card_footer_label_mails
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_files_and_directories
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_files_and_directories_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          5 scenario_details__settings_card_footer_label_directories
                        </div>
                      </div>
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          scenario_details__settings_card_footer_label_files
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_reference_books
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_reference_books_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          7 scenario_details__settings_card_footer_label_reference_books
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1mr3677-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_interventions
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_interventions_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          0 scenario_details__settings_card_footer_label_interventions
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1vkj32h-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_instructions
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_instructions_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          3 scenario_details__settings_card_footer_label_dimensions
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_events
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_events_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          1 scenario_details__settings_card_footer_label_events
                        </div>
                      </div>
                      <div
                        className="css-lpoiel-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-14sse2x-SettingsFooter"
            >
              <div
                className="css-tmfuw6-SettingsFooter"
              >
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-dpj2d0-SettingsFooter"
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card-footer css-11mdamy-CardFooter"
    />
  </div>
</div>
`;

exports[`scenario-detail renders correctly finalized 1`] = `
<div
  className="css-1u8brfm-ScenarioSelectionDetail"
>
  <div
    className="css-ul982y-DetailViewHeader"
  >
    <button
      className="css-rmd9d0-Button"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-95j2hm-Button"
      >
        <div
          className="css-1lrzij5-Icon"
          dangerouslySetInnerHTML={
            {
              "__html": {},
            }
          }
        />
        <div
          className="css-u7npei-DetailViewHeader"
        >
          projects__scenario_detail_navigate_back_label
        </div>
      </div>
    </button>
    <div
      className="css-tqo6e0-DetailViewHeader"
    >
      projects__scenario_detail_header_label
    </div>
  </div>
  <div
    className="css-mzr6l1-Card"
  >
    <div
      className="card-header css-1gsm478-CardHeader"
    />
    <div
      className="css-4t2i76-ScenarioSelectionDetail"
    >
      <div
        className="card-content css-1vyr92j-CardContent"
      >
        <div
          className="css-1ucjwqm-Columns"
        >
          <div
            className="css-me9x6r-Column"
          >
            <div
              className="css-lz4b3k-Label"
            >
              title
              <div
                className="css-nhflpf-Icon"
                dangerouslySetInnerHTML={
                  {
                    "__html": {},
                  }
                }
              />
            </div>
            <div
              className="css-nvhwxh-InlineEditableHeader"
            >
              <div>
                <form
                  className="css-1c5ej61-InlineEditableHeader"
                  onBlur={[Function]}
                  onSubmit={[Function]}
                >
                  <div
                    className="css-1boxw9s-InlineEditableHeader"
                  >
                    <div
                      className="css-1iwo50k"
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <div
                        className="css-nrul0i"
                      >
                        <input
                          className="css-2j0qcg"
                          defaultValue="Scenario 1"
                          disabled={false}
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          readOnly={true}
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      className="hover-icon css-16vb3lw-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            className="css-1oiyj7r-Column"
          >
            <div
              className="css-78az44-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              >
                <div
                  className="css-47wnmy-ReadonlyActionField"
                >
                  projects__detail_time_label
                </div>
              </div>
              <div
                className="content-wrapper css-b45n67-ReadonlyActionField"
              >
                <div
                  className="content css-1147qp7-ReadonlyActionField"
                >
                  <div
                    className="css-e8i3t7-Text"
                  >
                    <div
                      className="css-1lrzij5-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                    90 unit__minutes_short
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-18ypg4c-Column"
        >
          <div
            className="css-lz4b3k-Label"
          >
            description
            <div
              className="css-nhflpf-Icon"
              dangerouslySetInnerHTML={
                {
                  "__html": {},
                }
              }
            />
          </div>
          <div
            className="overlay-edit-field css-0"
          >
            <div
              className="css-1kjt8hf-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              />
              <div
                className="content-wrapper css-376q3o-ReadonlyActionField"
              >
                <div
                  className="content css-ci7wec-ReadonlyActionField"
                >
                  <div
                    className="css-10rpuak-InlineEditableTextarea"
                    onClick={[Function]}
                  >
                    <div
                      className="textarea css-1tlgdzf-InlineEditableTextarea"
                      contentEditable={false}
                      suppressContentEditableWarning={true}
                    >
                      description
                    </div>
                    <div
                      className="hover-icon css-1pndqgp-Icon"
                      dangerouslySetInnerHTML={
                        {
                          "__html": {},
                        }
                      }
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1x21b1w-Information"
        >
          <div
            className="overlay-edit-field css-0"
          >
            <div
              className="css-1v0z0k-ReadonlyActionField"
              data-testid="readonly-action-field"
            >
              <div
                className="css-1bkess4-ReadonlyActionField"
              >
                <div
                  className="css-47wnmy-ReadonlyActionField"
                >
                  scenario_details__general_tags
                </div>
              </div>
              <div
                className="content-wrapper css-b45n67-ReadonlyActionField"
              >
                <div
                  className="content css-1147qp7-ReadonlyActionField"
                >
                  <div
                    className="css-1ws8uc4-Tag"
                  >
                    <div
                      className="css-12ia3h2-Text"
                    >
                      placeholder__tags
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-uietcf-Columns"
          >
            <div
              className="css-1oiyj7r-Column"
            >
              <div
                className="css-156ssgf-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__general_email
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1hje2zc-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        scenario_details__unavailable
                      </div>
                    </div>
                  </div>
                  <button
                    className="readonly-action-button css-4nv627-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      create_button
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="css-1oiyj7r-Column"
            >
              <div
                className="css-1v0z0k-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__date
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1147qp7-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        01.01.1970 (scenario_details__fictive_date)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-1bbhnip-Column"
            >
              <div
                className="css-156ssgf-ReadonlyActionField"
                data-testid="readonly-action-field"
              >
                <div
                  className="css-1bkess4-ReadonlyActionField"
                >
                  <div
                    className="css-47wnmy-ReadonlyActionField"
                  >
                    scenario_details__general_contributors
                  </div>
                </div>
                <div
                  className="content-wrapper css-b45n67-ReadonlyActionField"
                >
                  <div
                    className="content css-1hje2zc-ReadonlyActionField"
                  >
                    <div
                      className="css-1bkess4-ReadonlyActionField"
                    >
                      <div
                        className="css-l0jg45-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      <div
                        className="css-odwty4-Text"
                      >
                        0 scenario_details__general_contributors
                      </div>
                    </div>
                  </div>
                  <button
                    className="readonly-action-button css-4nv627-Button"
                    disabled={true}
                    onClick={[Function]}
                  >
                    <div
                      className="css-95j2hm-Button"
                    >
                      scenario_details__button_invite
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-1alawau-DetailViewCard"
      >
        <div
          className="css-njxlss-LabelledCard"
        >
          <div
            className="css-lz4b3k-Label"
          >
            scenario_details__settings_label
          </div>
          <div
            className="css-1dmlxz8-Card"
          >
            <div
              className="card-header css-1gsm478-CardHeader"
            />
            <div
              className="card-content css-1vlcwyz-DetailViewCard"
            >
              <div
                className="css-1105yyi-ScenarioSettings"
              >
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_sample_company
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_sample_company_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          scenario_details__settings_card_footer_label_files
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_emails
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_emails_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          12 scenario_details__settings_card_footer_label_mails
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_files_and_directories
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_files_and_directories_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          5 scenario_details__settings_card_footer_label_directories
                        </div>
                      </div>
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          scenario_details__settings_card_footer_label_files
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_reference_books
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_reference_books_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          7 scenario_details__settings_card_footer_label_reference_books
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-e80v51-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_interventions
                        </div>
                      </div>
                      <div
                        className="css-1ultbtj-SettingsHeaderIcons"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_interventions_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          0 scenario_details__settings_card_footer_label_interventions
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1vkj32h-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_instructions
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_instructions_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          3 scenario_details__settings_card_footer_label_dimensions
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-c70e0x-Card"
                  onClick={[MockFunction]}
                >
                  <div>
                    <div
                      className="card-header css-1x5pyem-CardHeader"
                    >
                      <div
                        className="css-1b415o5-OverviewCard"
                      >
                        <div
                          className="css-1i6jmor-Heading"
                        >
                          scenario_details__settings_label_events
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        className="css-1v230f2-Text"
                      >
                        scenario_details__settings_events_description
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      className="card-footer css-texso5-CardFooter"
                    >
                      <div
                        className="css-1rku91j-CardFooterItem"
                      >
                        <div
                          className="css-1lrzij5-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                        <div
                          className="css-1de4iva-Text"
                        >
                          1 scenario_details__settings_card_footer_label_events
                        </div>
                      </div>
                      <div
                        className="css-o352k3-CardFooterItem"
                      >
                        <div
                          className="css-l0jg45-Icon"
                          dangerouslySetInnerHTML={
                            {
                              "__html": {},
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-14sse2x-SettingsFooter"
            >
              <div
                className="css-tmfuw6-SettingsFooter"
              >
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-dpj2d0-SettingsFooter"
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
                <div
                  className="css-edekix-Icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": {},
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="card-footer css-11mdamy-CardFooter"
    />
  </div>
</div>
`;
